upgrade contrast issue fixed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -135,7 +135,7 @@ body {
 
 .upgrade-item {
   text-align: center;
-  background: #00aaff;
+  background: #00699E;
   padding: 10px;
   border-radius: 5px;
   display: flex;
